issues with the display of svgs on safari vs chrome
the literally fonts in the svgs would change to something different; for those, I switched to png.

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -122,7 +122,7 @@
 	p.col-3 {
 		grid-column:span 6;
 		margin-left:0;
-		background-color:pink;
+		/*background-color:pink;*/
 	}
 
 	.role, .tools {
